feat: enable Java 21 virtual threads for improved concurrency